--- a/index.html
+++ b/index.html
@@ -13,34 +13,40 @@
 <body>
 
     <main class="container-main">
-        <div class="header">
-            <div class="profile">
-                <img src="./images/pexels-cottonbro-studio-3206078.jpg" alt="Profile Image">
-                <h1 class="name">Your Name</h1>
-            </div>
-            <section class="about-me">
-                <p class="about-me-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores reiciendis assumenda, itaque
-                    molestiae
-                    officiis voluptatum beatae omnis porro inventore consectetur deserunt corporis iste deleniti dolorem
-                    sequi sunt odio exercitationem pariatur!
-                </p>
-                <div class="links">
-                    <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
-                    <a href="https://linkedin.com/" target="_blank"><i class="uil uil-linkedin"></i></a>
-                    <a href="https://twitter.com/" target="_blank"><i class="uil uil-twitter"></i></a>
+        <section class="header-container">
+            <div class="header">
+                <div class="profile">
+                    <h1 class="name">Your Name Right Here</h1>
                 </div>
-            </section>
-        </div>
+                <section class="about-me">
+                    <p class="about-me-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores reiciendis assumenda, itaque
+                        molestiae
+                        officiis voluptatum beatae omnis porro inventore consectetur deserunt corporis iste deleniti
+                        dolorem
+                        sequi sunt odio exercitationem pariatur!
+                    </p>
+                    <div class="links">
+                        <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                        <a href="https://linkedin.com/" target="_blank"><i class="uil uil-linkedin"></i></a>
+                        <a href="https://twitter.com/" target="_blank"><i class="uil uil-twitter"></i></a>
+                    </div>
+                </section>
+            </div>
+        </section>
         <section class="my-work">
             <h1 class="my-work-title">My Work</h1>
             <div class="projects-container">
                 <div class="project">
-                    <img src="" alt="">
+                    <div class="project-image"></div>
                     <div class="details">
                         <div class="project-name-links">
                             <h1 class="project-title">Project 1</h1>
-                            <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                            <div class="project-links">
+                                <a href="https://google.com/" target="_blank"><i
+                                        class="uil uil-external-link-alt"></i></a>
+                                <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                            </div>
                         </div>
                         <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque
                             deleniti dolor officia asperiores impedit! Laudantium, voluptatem consequuntur odit maiores
@@ -48,11 +54,15 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="" alt="">
+                    <div class="project-image"></div>
                     <div class="details">
                         <div class="project-name-links">
                             <h1 class="project-title">Project 1</h1>
-                            <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                            <div class="project-links">
+                                <a href="https://google.com/" target="_blank"><i
+                                        class="uil uil-external-link-alt"></i></a>
+                                <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                            </div>
                         </div>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit alias,
                             perferendis saepe omnis error numquam vitae, dolorem voluptatum at laboriosam ratione facere
@@ -60,11 +70,15 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="" alt="">
+                    <div class="project-image"></div>
                     <div class="details">
                         <div class="project-name-links">
                             <h1 class="project-title">Project 1</h1>
-                            <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                            <div class="project-links">
+                                <a href="https://google.com/" target="_blank"><i
+                                        class="uil uil-external-link-alt"></i></a>
+                                <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                            </div>
                         </div>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quisquam,
                             vitae atque, sint magni earum, quia optio nam quod in consequatur similique aspernatur
@@ -72,11 +86,15 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="" alt="">
+                    <div class="project-image"></div>
                     <div class="details">
                         <div class="project-name-links">
                             <h1 class="project-title">Project 1</h1>
-                            <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                            <div class="project-links">
+                                <a href="https://google.com/" target="_blank"><i
+                                        class="uil uil-external-link-alt"></i></a>
+                                <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                            </div>
                         </div>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sit ab
                             ullam deserunt at sunt voluptates! Enim obcaecati deserunt laborum? Quae iure ipsam,
@@ -84,11 +102,15 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="" alt="">
+                    <div class="project-image"></div>
                     <div class="details">
                         <div class="project-name-links">
                             <h1 class="project-title">Project 1</h1>
-                            <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                            <div class="project-links">
+                                <a href="https://google.com/" target="_blank"><i
+                                        class="uil uil-external-link-alt"></i></a>
+                                <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                            </div>
                         </div>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ut
                             itaque fuga dolorem quas veniam, minus temporibus, veritatis eum dignissimos, blanditiis
@@ -96,11 +118,15 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="" alt="">
+                    <div class="project-image"></div>
                     <div class="details">
                         <div class="project-name-links">
                             <h1 class="project-title">Project 1</h1>
-                            <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                            <div class="project-links">
+                                <a href="https://google.com/" target="_blank"><i
+                                        class="uil uil-external-link-alt"></i></a>
+                                <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                            </div>
                         </div>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
                             temporibus recusandae, non est vitae dolorem expedita quod fugit porro. Laudantium, eaque
