--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <h1 class="name">Your Name Right Here</h1>
                 </div>
                 <section class="about-me">
+                    <h1>About me</h1>
                     <p class="about-me-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores reiciendis assumenda, itaque
                         molestiae
@@ -137,11 +138,30 @@
         </section>
     </main>
     <footer class="container-footer">
-        <section class="contact-me">
+        <section class="container-footer">
+            <div class="contact-me">
+                <div class="contact">
+                    <h1 class="contact-title">Contact me</h1>
+                    <p class="details"> Please get in touch if you think our work could be mutually beneficial!</p>
+                    <p class="adress">1234 Random Road Random Town, California 12345</p>
+                    <div class="phone">
+                        <i class="uil uil-phone"></i>
+                        <p>555-555-5555</p>
+                    </div>
+                    <div class="email">
+                        <i class="uil uil-envelope"></i>
+                        <p>randommail@gmail.com</p>
+                    </div>
+                </div>
+                <div class="contact-links">
+                    <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
+                    <a href="https://linkedin.com/" target="_blank"><i class="uil uil-linkedin"></i></a>
+                    <a href="https://twitter.com/" target="_blank"><i class="uil uil-twitter"></i></a>
+                </div>
 
+            </div>
+            <div class="contact-image"></div>
         </section>
-        <img src="./images/pexels-cottonbro-studio-3206149.jpg" alt="Contact Image">
-
     </footer>
 
 </body>
