--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1 class="my-work-title">My Work</h1>
             <div class="projects-container">
                 <div class="project">
-                    <div class="project-image"></div>
+                    <div class="project-image1"></div>
                     <div class="details">
                         <div class="project-name-links">
                             <h1 class="project-title">Project 1</h1>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <div class="project-image"></div>
+                    <div class="project-image2"></div>
                     <div class="details">
                         <div class="project-name-links">
                             <h1 class="project-title">Project 1</h1>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <div class="project-image"></div>
+                    <div class="project-image3"></div>
                     <div class="details">
                         <div class="project-name-links">
                             <h1 class="project-title">Project 1</h1>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <div class="project-image"></div>
+                    <div class="project-image4"></div>
                     <div class="details">
                         <div class="project-name-links">
                             <h1 class="project-title">Project 1</h1>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <div class="project-image"></div>
+                    <div class="project-image5"></div>
                     <div class="details">
                         <div class="project-name-links">
                             <h1 class="project-title">Project 1</h1>
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <div class="project-image"></div>
+                    <div class="project-image6"></div>
                     <div class="details">
                         <div class="project-name-links">
                             <h1 class="project-title">Project 1</h1>
